# kaggle-agent

./: .gitignore.txt  README.md  pyproject.toml
agent/: kaggle_utils.py  llm_claude.py  notebook.py  pipeline.py
tests/: test_pipeline.py
